--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 :root {
-    --primary-color: #2c3e50;
+    --primary-color: #2a3944;
     --secondary-color: rgb(3, 7, 18);
     --accent-color: #030712;
     --gray-background: #030712;
@@ -9,6 +9,8 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
+    background-color: var(--white-font);
+    color: var(--accent-color);
 }
 
 .navbar {
@@ -294,4 +296,16 @@ footer {
 .card-body{
     background-color: var(--gray-background);
     color: var(--white-font);
+}
+
+.card-title{
+  padding: 5px;
+  background-color: var(--white-font);
+  border-radius: 10px;
+  color: #000000;
+  font-weight: bold;
+}
+
+.icon-footer img{
+    width: 35px;
 }
