--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,10 @@ body {
     color: var(--accent-color);
 }
 
+h2{
+    font-weight: bold;
+}
+
 .navbar {
     background-color: var(--gray-background);
     box-shadow: 0;
@@ -232,8 +236,8 @@ body {
 }
 
 .card-body img{
-    width: 45px;
-    height: 45px;
+    width: 50px;
+    height: 50px;
 }
 
 footer {
@@ -534,21 +538,15 @@ body {
 }
 
 .card img {
-    height: 525px;
+    height: 325px;
     width: 100%;
     object-fit: cover;
 }
 
 footer {
-    background-color: var(--primary-color);
+    background-color: var(--gray-background);
     color: white;
-    padding: 3rem 0 1rem;
-}
-
-.footer-logo {
-    font-size: 1.5rem;
-    font-weight: bold;
-    margin-bottom: 1rem;
+    padding: 2rem 0 1rem;
 }
 
 .tech-icons {
@@ -593,4 +591,8 @@ footer {
 .card-body{
     background-color: var(--gray-background);
     color: var(--white-font);
+}
+
+.card-body img{
+    width: 50px;
 }
