--- a/css/style.css
+++ b/css/style.css
@@ -242,20 +242,14 @@ h2{
 
 footer {
     background-color: var(--gray-background);
-    color: white;
-    padding: 3rem 0 1rem;
+    color: var(--white-font);
+    padding: 2rem 0 1rem;
 }
 
 #logo-footer{
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-.footer-logo {
-    font-size: 1.5rem;
-    font-weight: bold;
-    margin-bottom: 1rem;
 }
 
 .tech-icons {
